@@ -9,6 +9,7 @@ NEW IN VERSION 1.4
 - Bug fix : completion always matched on 3 characters of command instead
   of per-command length (broke completion for 'ls')
 - Copy permissions of old database to new database when saving
+- Ask user for confirmation before acting on "quit" command
 
 NEW IN VERSION 1.3.1
 
@@ -100,4 +101,4 @@ NEW IN VERSION 0.7
 
 - Add tdlg to do log as a single command name.
 
-$Header: /cvs/src/tdl/NEWS,v 1.20 2003/05/13 21:00:46 richard Exp $
+$Header: /cvs/src/tdl/NEWS,v 1.21 2003/05/13 21:06:13 richard Exp $
